--- a/roles/debian/389ds/tasks/plugins/dna.yml
+++ b/roles/debian/389ds/tasks/plugins/dna.yml
@@ -5,7 +5,7 @@
 - name: Enable DNA Plugin
   ldap_attrs:
     bind_dn: cn=manager
-    bind_pw: password
+    bind_pw: "{{ dirsrv_root_pw }}"
     server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
     validate_certs: no
     dn: cn=Distributed Numeric Assignment Plugin,cn=plugins,cn=config
