--- a/roles/389ds-bootstrap/tasks/plugins/dna.yml
+++ b/roles/389ds-bootstrap/tasks/plugins/dna.yml
@@ -4,9 +4,9 @@
 ---
 - name: Enable DNA Plugin
   ldap_attrs:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
     dn: cn=Distributed Numeric Assignment Plugin,cn=plugins,cn=config
     attributes:
@@ -17,9 +17,9 @@
 # Create the shared OU
 - name: Create the DNA Shared Ranges OU
   ldap_entry:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
     dn: "ou=Ranges,{{ dirsrv_domain }}"
     objectClass:
@@ -32,9 +32,9 @@
 # Create the shared objects
 - name: Create the DNA Shared Account and Group Objects
   ldap_entry:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
     dn: "cn={{ dna_loop1 }},ou=Ranges,{{ dirsrv_domain }}"
     objectClass:
@@ -51,16 +51,16 @@
 # Set host-specific replication parameters
 - name: Configure DNA replication parameters
   ldap_entry:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
-    dn: "dnaHostname={{ ansible_fqdn }}+dnaPortNum=389,cn=Account {{ dna_loop2 }}s,ou=Ranges,{{ dirsrv_domain }}"
+    dn: "dnaHostname=ldap.homelab.internal+dnaPortNum=389,cn=Account {{ dna_loop2 }}s,ou=Ranges,{{ dirsrv_domain }}"
     objectClass:
       - top
       - dnaSharedConfig
     attributes:
-      dnaHostname: "{{ ansible_fqdn }}"
+      dnaHostname: ldap.homelab.internal
       dnaPortNum: 389
       dnaSecurePortNum: 636
     state: present
@@ -74,9 +74,9 @@
 # Ensure that the DNA configuration entries exist
 - name: Create DNA plugin configuration entries
   ldap_entry:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
     dn: cn=Account {{ dna_loop3 }}s,cn=Distributed Numeric Assignment Plugin,cn=plugins,cn=config
     objectClass:
@@ -101,9 +101,9 @@
 # Assert that the actual DNA plugin parameters are correct
 - name: Configure DNA plugin
   ldap_attrs:
-    bind_dn: cn=manager
-    bind_pw: "{{ dirsrv_root_pw }}"
-    server_uri: "{% if dirsrv_cert_db.stat.exists %}ldaps://{% else %}ldap://{% endif %}"
+    bind_dn: cn=Directory Manager
+    bind_pw: password
+    server_uri: ldaps://ldap.homelab.internal
     validate_certs: no
     dn: cn=Account {{ dna_loop4 }}s,cn=Distributed Numeric Assignment Plugin,cn=plugins,cn=config
     attributes:
